2003-07-16  Royce Mitchell III <royce3@ev1.net>

	* modifed strtok & wcstok in msvcrt so that crtdll can use it.
	* new private support functions _lasttoken and _wlasttoken to support
	strtok and wcstok respectively.
	* fixed lib/msvcrt/stdio/vfscanf.c to remove unnecessary globals.

2003-07-16  Royce Mitchell III <royce3@ev1.net>

	* fixed warnings at lib/msvcrt/stdio/fputs.c:79
	and lib/msvcrt/stdlib/errno.c:14
	and lib/msvcrt/stdlib/wputenv.c:24

2003-07-16  Royce Mitchell III <royce3@ev1.net>

	* integrated Art Yerkes' _ftime implementation at
	lib/msvcrt/time/ftime.c
	* fixed ungetc warning in lib/msvcrt/stdio/vfscanf.c (also
	renamed ungetc macro to UNGETC for clarity)

2003-07-15  Royce Mitchell III <royce3@ev1.net>

	* fixed references to errno in MSVCRT to use __set_errno() and
	_errno() respectively.
	* Fixed warning (args 3 & 6 in call to CreateThread) in
	lib/msvcrt/process/threadx.c

2003-07-15  Royce Mitchell III <royce3@ev1.net>

	* modified crtdll to forward most of it's CTYPE, STRING
	and WSTRING entries to NTDLL or MSVCRT.

2003-07-14  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* lib/gdi32/misc/stubs.c Remove FillRgn.
	* lib/gdi32/objects/region.c Add FillRng.
	It looks okay.

2003-07-12  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	Changes for compiling with w32api

	* include/ddk/extypes.h (NPAGED_LOOKASIDE_LIST, PAGED_LOOKASIDE_LIST):
	Match w32api fields.
	* include/ddk/halfuncs.h (HalReturnToFirmware, HalReleaseDisplayOwnership,
	HalQueryDisplayOwnership): Move ...
	* include/ntos/halfuncs.h: ... here.
	* include/ntos/rtl.h: (PopEntrySList, PushEntrySList): Move to
	ntoskrnl/ex/lookas.c.
	* include/ntos/zw.h (NtAccessCheckAndAuditAlarm, NtCancelTimer,
	NtCreatePagingFile, NtCreateThread, NtFlushInstructionCache,
	NtFlushVirtualMemory, NtGetTickCount, NtLoadKey, NtLockVirtualMemory,
	NtOpenObjectAuditAlarm, NtProtectVirtualMemory, NtQueryDirectoryObject,